Renamed "plugin" to "module" and changed the interface format.

--- a/modules/Makefile
+++ b/modules/Makefile
@@ -1,13 +1,13 @@
 
 PLATFORM:=$(shell uname)
 ifeq ($(PLATFORM), Darwin)
-LIB_SUFFIX:=.dylib
+MODULE_SUFFIX:=.dylib
 
 %.dylib: %.o
 	gcc -dynamiclib -undefined suppress -flat_namespace $< -o $@
 
 else
-LIB_SUFFIX:=.so
+MODULE_SUFFIX:=.so
 	CFLAGS:=-fPIC
 
 %.so: %.o
@@ -17,11 +17,11 @@ endif
 
 SRCS=$(wildcard *.c)
 OBJECTS=$(SRCS:.c=.o)
-LIBS=$(SRCS:.c=$(LIB_SUFFIX))
+LIBS=$(SRCS:.c=$(MODULE_SUFFIX))
 
 default: $(LIBS)
 
 clean:
-	rm -f *$(LIB_SUFFIX) *.o
+	rm -f *$(MODULE_SUFFIX) *.o
 
 
