--- a/ircb.conf
+++ b/ircb.conf
@@ -8,3 +8,6 @@ username = cbot_user
 hostname = cbot_host
 servername = cbot_servername
 realname = CBot Real Name
+
+[ctcp]
+version = plain C irc bot: https://github.com/tfc/ircbot
